--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@ function init() {
   scene.add(new THREE.AmbientLight( 0x555555 ));
 
   // model
+	var manager = new THREE.LoadingManager();
+	manager.onProgress = function ( item, loaded, total ) {
+
+		console.log( item, loaded, total );
+
+	};
   var onProgress = function ( xhr ) {
     if ( xhr.lengthComputable ) {
       var percentComplete = xhr.loaded / xhr.total * 100;
