--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ function init() {
   var loader = new THREE.OBJLoader( manager );
   loader.load( 'assets/logo.obj', function ( object ) {
 
-    anchorModel.copy(object);
+    anchorModel = object;
 
   }, onProgress, onError );
 
