--- a/index.html
+++ b/index.html
@@ -276,9 +276,10 @@ function createProducts()
   localToWorld.decompose(trans, rot, scale);
 
 	var mesh = new THREE.Mesh( plane, material );
+  var vec = new THREE.Vector3(0.001, 0.001, 0.001);
+  mesh.scale.copy(vec);
   mesh.position.copy(trans);
   mesh.quaternion.copy(rot);
-  mesh.scale.set(0.01, 0.01, 0.01);
 	scene.add(mesh);
 }
 
