--- a/index.html
+++ b/index.html
@@ -497,9 +497,9 @@ function updateProducts(pos)
 
       product.description.visible = product.animation > 0.00001;
 
-      product.anchor.rotation.x += 0.015;
-    	product.anchor.rotation.y += 0.01;
-    	product.anchor.rotation.z += 0.005;
+      //product.anchor.rotation.x += 0.015;
+    	//product.anchor.rotation.y += 0.01;
+    	//product.anchor.rotation.z += 0.005;
     }
 }
 
