--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ function createProduct(position, localToWorld, productInfo)
 	mesh.material.metalness = 0.5;
   mesh.position.copy(p);
   mesh.quaternion.copy(rot);
-  mesh.rotation.x += 0.5 * Math.PI;
+  mesh.rotation.x -= 0.5 * Math.PI;
   mesh.scale.set(0.0001, 0.0001, 0.0001);
   scene.add( mesh );
 
@@ -498,9 +498,9 @@ function updateProducts(pos)
 
       product.description.visible = product.animation > 0.00001;
 
-      //product.anchor.rotation.x += 0.015;
-    	//product.anchor.rotation.y += 0.01;
-    	//product.anchor.rotation.z += 0.005;
+      product.anchor.rotation.x += 0.015;
+    	product.anchor.rotation.y += 0.01;
+    	product.anchor.rotation.z += 0.005;
     }
 }
 
