--- a/index.html
+++ b/index.html
@@ -351,8 +351,6 @@ function createProduct(position, localToWorld, productInfo)
   // Create image
   var bitmap = document.createElement('canvas');
   var context = bitmap.getContext('2d');
-  context.fillStyle = '#000000';
-  context.fillRect( 0, 0, 700, 700 );
   bitmap.width = 700;
   bitmap.height = 700;
 
@@ -498,9 +496,9 @@ function updateProducts(pos)
 
       product.description.visible = product.animation > 0.00001;
 
-      product.anchor.rotation.x += 0.015;
+      //product.anchor.rotation.x += 0.015;
     	product.anchor.rotation.y += 0.01;
-    	product.anchor.rotation.z += 0.005;
+    	//product.anchor.rotation.z += 0.005;
     }
 }
 
