--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
   <canvas id="canvas"></canvas>
   <div style="display:none;">
-    <img id="source" src="assets/bAw-logoform-pantone-108-13C.png"
+    <img id="source" src="assets/logo1.png"
          width="800" height="800">
   </div>
 
