--- a/index.html
+++ b/index.html
@@ -230,27 +230,27 @@ function generateSprite() {
 
 function initParticle( particle, delay ) {
 
-  var particle = this instanceof THREE.Sprite ? this : particle;
-  var delay = delay !== undefined ? delay : 0;
+	var particle = this instanceof THREE.Sprite ? this : particle;
+	var delay = delay !== undefined ? delay : 0;
 
-  particle.position.set( 0, 0, 0 );
-  particle.scale.x = particle.scale.y = Math.random() * 32 + 16;
+	particle.position.set( 0, 0, 0 );
+	particle.scale.x = particle.scale.y = 0.01 * (Math.random() * 32 + 16);
 
-  new TWEEN.Tween( particle )
-    .delay( delay )
-    .to( {}, 10000 )
-    .onComplete( initParticle )
-    .start();
+	new TWEEN.Tween( particle )
+		.delay( delay )
+		.to( {}, 10000 )
+		.onComplete( initParticle )
+		.start();
 
-  new TWEEN.Tween( particle.position )
-    .delay( delay )
-    .to( { x: Math.random() * 4000 - 2000, y: Math.random() * 1000 - 500, z: Math.random() * 4000 - 2000 }, 10000 )
-    .start();
+	new TWEEN.Tween( particle.position )
+		.delay( delay )
+		.to( { x: Math.random() - 0.5, y: Math.random() - 0.5, z: Math.random() - 0.5 }, 10000 )
+		.start();
 
-  new TWEEN.Tween( particle.scale )
-    .delay( delay )
-    .to( { x: 0.01, y: 0.01 }, 10000 )
-    .start();
+	new TWEEN.Tween( particle.scale )
+		.delay( delay )
+		.to( { x: 0.0001, y: 0.0001 }, 10000 )
+		.start();
 
 }
 
