--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ function onClick (e)
     // Show particles
     for(var i = 0; i < particles.length; i++)
     {
-      initParticle( particle, i * 10, pos );
+      initParticle( particles[i], i * 10, pos );
     }
 
     if(isInitialized())
