--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ function createProduct(position, localToWorld, productInfo)
   // ANCHOR
   // Create anchor
   var mesh = anchorModel.clone();
-  mesh.material = new THREE.MeshStandardMaterial();
+  mesh.material = new THREE.MeshStandardMaterial({color:new THREE.Color(1, 0.7, 0.7)});
 	mesh.material.roughness = 0.5;
 	mesh.material.metalness = 0.5;
   mesh.position.copy(p);
