--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ function createProduct(position, localToWorld, productInfo)
 	mesh.material.roughness = 0.5;
 	mesh.material.metalness = 0.5;
   mesh.position.copy(p);
-  mesh.rotation.y -= 0.5 * Math.PI;
+  mesh.rotation.x -= 0.5 * Math.PI;
   mesh.quaternion.copy(rot);
   mesh.scale.set(0.0001, 0.0001, 0.0001);
   scene.add( mesh );
