--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -32,7 +32,6 @@
 				<h1 id="ProductTitle">My sweet product</h1>
 				<h2 id="ProductName">My sweet product</h2>
 				<span id="Teaser"></span>
-				<img id="ProductImage"style="display:none"/> 
 
 				<div id="ProcessLine" style="display:none">
 					<table>
@@ -79,11 +78,10 @@
 					<div id="Certification4">cert</div>
 				</div> 
 			</div>
-			<div id="logos">
-				<div class=logo>
-					
-				</div>
-			</div>
+		</div>
+
+		<div id="ProductLogo">
+				<img id="ProductImage"/> 
 		</div>
 	</div>
 
