--- a/index.html
+++ b/index.html
@@ -85,13 +85,14 @@
     <a href="https://developers.google.com/ar/develop/web/getting-started#examples">examples</a>
   </span>
 </div>-->
-<script src="./three.js"></script>
-<script src="./VRControls.js"></script>
-<script src="./three.ar.js"></script>
-<script src="./numeric.js"></script>
-<script src="./OBJLoader.js"></script>
+<script src="./extern/three.js"></script>
+<script src="./extern/VRControls.js"></script>
+<script src="./extern/three.ar.js"></script>
+<script src="./extern/numeric.js"></script>
+<script src="./extern/OBJLoader.js"></script>
 <script src="./assets/product-info.js"></script>
-<script src="./tween.min.js"></script>
+<script src="./extern/tween.min.js"></script>
+<script src="./particles.js"></script>
 <script>
 
 var vrDisplay, vrControls, vrFrameData, arView;
@@ -190,69 +191,10 @@ function init() {
 
   }, onProgress, onError );
 
-  // Particles
-  var material = new THREE.SpriteMaterial( {
-    map: new THREE.CanvasTexture( generateSprite() ),
-    blending: THREE.AdditiveBlending
-  } );
-
-  for ( var i = 0; i < 500; i++ ) {
-
-    particle = new THREE.Sprite( material );
-    particle.visible = false;
-    particles.push(particle);
-
-    scene.add( particle );
-  }
+  initParticles();
 
   // Kick off the render loop!
   update();
-}
-
-function generateSprite() {
-
-  var canvas = document.createElement( 'canvas' );
-  canvas.width = 16;
-  canvas.height = 16;
-
-  var context = canvas.getContext( '2d' );
-  var gradient = context.createRadialGradient( canvas.width / 2, canvas.height / 2, 0, canvas.width / 2, canvas.height / 2, canvas.width / 2 );
-  gradient.addColorStop( 0, 'rgba(255,255,255,1)' );
-  gradient.addColorStop( 0.2, 'rgba(0,255,255,1)' );
-  gradient.addColorStop( 0.4, 'rgba(0,0,64,1)' );
-  gradient.addColorStop( 1, 'rgba(0,0,0,1)' );
-
-  context.fillStyle = gradient;
-  context.fillRect( 0, 0, canvas.width, canvas.height );
-
-  return canvas;
-
-}
-
-function initParticle( particle, delay, animationTime, pos ) {
-
-	var particle = this instanceof THREE.Sprite ? this : particle;
-
-  particle.visible = true;
-	particle.position.copy(pos);
-	particle.scale.x = particle.scale.y = 0.01 + 0.02 * Math.random();
-
-	new TWEEN.Tween( particle )
-		.delay( delay )
-		.to( {}, animationTime )
-		.onComplete( function(){particle.visible = false;} )
-		.start();
-
-	new TWEEN.Tween( particle.position )
-		.delay( delay )
-		.to( { x: pos.x + Math.random() - 0.5, y: pos.y + Math.random() - 0.5, z: pos.z + Math.random() - 0.5 }, animationTime )
-		.start();
-
-	new TWEEN.Tween( particle.scale )
-		.delay( delay )
-		.to( { x: 0.0001, y: 0.0001 }, animationTime )
-		.start();
-
 }
 
 /**
@@ -304,17 +246,6 @@ function onClick (e)
         createProducts();
       }
     }
-  }
-}
-
-function initParticleEffect(pos)
-{
-  var time = 2000;
-  var delay = time / particles.length;
-  // Show particles
-  for(var i = 0; i < particles.length; i++)
-  {
-    initParticle( particles[i], delay, time, pos );
   }
 }
 
