--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 <script src="./assets/product-info.js"></script>
 <script src="./extern/tween.min.js"></script>
 <script src="./particles.js"></script>
+<script src="./products.js"></script>
 <script>
 
 var vrDisplay, vrControls, vrFrameData, arView;
