--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ var vrDisplay, vrControls, vrFrameData, arView;
 var canvas, camera, scene, renderer;
 var recordedHits = [];
 var anchorModel;
+var local2World;
 
 /**
  * Use the `getARDisplay()` utility to leverage the WebVR API
@@ -255,11 +256,25 @@ function initialize()
   var x2 = new THREE.Vector3(0.85, 0.0, 0.0);
   var x3 = new THREE.Vector3(0.0, 0.0, 0.0);
 
-  var localToWorld = estimateTransformation([x1, x2, x3], recordedHits);
+  estimateTransformation([x1, x2, x3], recordedHits);
 
   createProducts(localToWorld);
 
   createVideo(localToWorld);
+}
+
+function localToWorld(position)
+{
+  var trans = new THREE.Vector3();
+  var rot = new THREE.Quaternion();
+  var scale = new THREE.Vector3();
+  local2World.decompose(trans, rot, scale);
+
+  var xAxis = new THREE.Vector3(), yAxis = new THREE.Vector3(), zAxis = new THREE.Vector3();
+  local2World.extractBasis(xAxis, yAxis, zAxis);
+
+  return trans.clone().add(xAxis.clone().multiplyScalar(position.x).add(yAxis.clone().multiplyScalar(position.y)).
+    add(zAxis.clone().multiplyScalar(position.z)));
 }
 
 function estimateTransformation(X, Y)
@@ -295,13 +310,11 @@ function estimateTransformation(X, Y)
   var R = numeric.dot(V, numeric.dot(D, WT));
 
   // Create matrix
-  var localToWorld = new THREE.Matrix4();
-  localToWorld.set(R[0][0], R[1][0], R[2][0], translation.x,
+  local2World = new THREE.Matrix4();
+  local2World.set(R[0][0], R[1][0], R[2][0], translation.x,
                   R[0][1], R[1][1], R[2][1], translation.y,
                   R[0][2], R[1][2], R[2][2], translation.z,
                   0.0, 0.0, 0.0, 1.0);
-
-  return localToWorld;
 }
 
 function isInitialized()
