--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@ function initialize()
 
   estimateTransformation([x1, x2, x3], recordedHits);
 
-  createProducts(localToWorld);
+  createProducts();
 
-  createVideo(localToWorld);
+  createVideo();
 }
 
 function isInitialized()
