--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
          width="800" height="800">
   </div>
 
-	<video id="video" autoplay loop webkit-playsinline style="display:none">
+	<!--<video id="video" autoplay loop webkit-playsinline style="display:none">
 		<source src="assets/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 		<source src="assets/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>
-	</video>
+	</video>-->
 	<!--<video id="video" autoplay loop webkit-playsinline style="display:none">
 		<source src="assets/t_shirt.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 	</video>-->
