--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ function update() {
     var pos = new THREE.Vector3( pose.position[0], pose.position[1], pose.position[2] );
     updateProducts(pos);
 
-    updateVideo();
+    updateVideo(pos);
   }
 
   updateParticles();
