--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
   </div>
 
 	<video id="myVideo" autoplay muted style="display:none">
-		<source src="videos/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>
+		<source src="videos/sintel.mp4" type='video/mp4; codecs="theora, vorbis"'>
 	</video>
+  <button id="playbackButton" type="button">Click Me!</button>
 
 	<!--<video id="video" autoplay loop webkit-playsinline style="display:none">
 		<source src="assets/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
