--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
   </div>
 
 	<video id="myVideo" autoplay muted style="display:none">
-		<source src="videos/sintel.mp4" type='video/mp4; codecs="theora, vorbis"'>
+		<source src="videos/sintel.mp4" type="video/mp4">
+    <source src="videos/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>
+      Your browser does not support the video tag.
 	</video>
   <button id="playbackButton" type="button">Click Me!</button>
 
