--- a/index.html
+++ b/index.html
@@ -71,13 +71,6 @@
          width="800" height="800">
   </div>
 
-	<!--<video id="video" autoplay loop webkit-playsinline style="display:none">
-		<source src="assets/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-		<source src="assets/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>
-	</video>-->
-	<!--<video id="video" autoplay loop webkit-playsinline style="display:none">
-		<source src="assets/t_shirt.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-	</video>-->
 <!--<div id="info">
   <span class="title">Render detected surfaces.</span><br/>
   <span class="links">
@@ -243,7 +236,7 @@ function onClick (e)
       if(isInitialized())
       {
         createProducts();
-        createVideo();
+        //createVideo();
       }
     }
   }
@@ -280,7 +273,7 @@ function update() {
     var pos = new THREE.Vector3( pose.position[0], pose.position[1], pose.position[2] );
     updateProducts(pos);
 
-    updateVideo(pos);
+    //updateVideo(pos);
   }
 
   updateParticles();
