--- a/index.html
+++ b/index.html
@@ -1,19 +1,3 @@
-<!--
-/*
- * Copyright 2017 Google Inc. All Rights Reserved.
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -64,6 +48,25 @@
     }
   </style>
 </head>
+
+<script src="./extern/three.js"></script>
+<script src="./extern/VRControls.js"></script>
+<script src="./extern/three.ar.js"></script>
+<script src="./extern/numeric.js"></script>
+<script src="./extern/OBJLoader.js"></script>
+<script src="./assets/product-info.js"></script>
+<script src="./extern/tween.min.js"></script>
+<script src="./transformations.js"></script>
+<script src="./particles.js"></script>
+<script src="./products.js"></script>
+<script src="./threex.videotexture.js"></script>
+<script src="./video.js"></script>
+
+<div style='position: absolute; top: 0px; width: 100%;font-family:arial; font-weight: bolder; padding-top: 5px;'>
+  on IOS, start the video manually
+  <button onclick='onVideoPlayButtonClick()'>play</button>
+  <button onclick='onVideoPauseButtonClick()'>pause</button>
+</div>
 <body>
   <canvas id="canvas"></canvas>
   <div style="display:none;">
@@ -78,18 +81,6 @@
     <a href="https://developers.google.com/ar/develop/web/getting-started#examples">examples</a>
   </span>
 </div>-->
-
-<script src="./extern/three.js"></script>
-<script src="./extern/VRControls.js"></script>
-<script src="./extern/three.ar.js"></script>
-<script src="./extern/numeric.js"></script>
-<script src="./extern/OBJLoader.js"></script>
-<script src="./assets/product-info.js"></script>
-<script src="./extern/tween.min.js"></script>
-<script src="./transformations.js"></script>
-<script src="./particles.js"></script>
-<script src="./products.js"></script>
-<script src="./video.js"></script>
 <script>
 
 var vrDisplay, vrControls, vrFrameData, arView;
