--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
   </div>
   <div style='position: absolute; top: 0px; width: 100%;font-family:arial; font-weight: bolder; padding-top: 5px;'>
     on IOS, start the video manually
-    <button onclick='onVideoPlayButtonClick()'>play</button>
-    <button onclick='onVideoPauseButtonClick()'>pause</button>
   </div>
 
-<!--<div id="info">
+<div id="info">
   <span class="title">Render detected surfaces.</span><br/>
   <span class="links">
     <a href="https://github.com/google-ar/three.ar.js">three.ar.js</a> -
     <a href="https://developers.google.com/ar/develop/web/getting-started#examples">examples</a>
+    <button onclick='onVideoPlayButtonClick()'>play</button>
+    <button onclick='onVideoPauseButtonClick()'>pause</button>
   </span>
-</div>-->
+</div>
 <script>
 
 var vrDisplay, vrControls, vrFrameData, arView;
