--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
       <button onclick='onVideoPauseButtonClick()'>pause</button>
     </span>
   </div>
+  <div style="display:none;">
+    <img id="logo" src="assets/logo1.png"
+         width="800" height="800">
+    <img id="source" src="assets/logo1.png"
+          width="800" height="800">
+  </div>
   <script>
 
 var vrDisplay, vrControls, vrFrameData, arView;
