--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <script src="./extern/three.ar.js"></script>
 <script src="./extern/numeric.js"></script>
 <script src="./extern/OBJLoader.js"></script>
-<script src="./assets/product-info.js"></script>
+<script src="./product-info.js"></script>
 <script src="./extern/tween.min.js"></script>
 <script src="./transformations.js"></script>
 <script src="./particles.js"></script>
