--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@ function onClick (e)
       if(isInitialized())
       {
         createProducts();
-        createVideo();
+        alert('Initialized')
+        //createVideo();
       }
     }
   }
@@ -255,7 +256,7 @@ function update() {
     var pos = new THREE.Vector3( pose.position[0], pose.position[1], pose.position[2] );
     updateProducts(pos);
 
-    updateVideo(pos);
+    //updateVideo(pos);
   }
 
   updateParticles();
