--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ function onClick (e)
       }
     }
   }
-  else if(!isInitialized()) {
+  else {
     updateText("Kig lidt mere rundt før du trykker");
     warningTime = new Date().getTime();
   }
@@ -248,6 +248,8 @@ function onClick (e)
 
 function updateText(text)
 {
+  if( isInitialized() )
+    return;
   var x = document.getElementById("HelpText");
   x.textContent = text;
 }
