added a directional light

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@ function init() {
 
   // Add lights
   scene.add(new THREE.AmbientLight( 0x888888 ));
+  scene.add(new THREE.DirectionalLight( 0xffffff, 0.5 ));
 
   // model
 	var manager = new THREE.LoadingManager();
