--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ function onClick (e)
         var element = document.getElementById("info");
         element.parentNode.removeChild(element);
         createProducts();
-        //createVideo();
+        createVideo();
       }
       else {
         updateText("Tryk på nummer " + (recordedHits.length + 1));
@@ -303,7 +303,7 @@ function update() {
     var pos = new THREE.Vector3( pose.position[0], pose.position[1], pose.position[2] );
     updateProducts(pos);
 
-    //updateVideo(pos);
+    updateVideo(pos);
   }
 
   updateParticles();
