--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ function onClick (e)
         var element = document.getElementById("info");
         element.parentNode.removeChild(element);
         createProducts();
-        createVideo();
+        createVideo('AR_assets/Swedish_stocking/swedishstockings_film_2017.mp4', new THREE.Vector3(1.2, 0.5, 0.0));
       }
       else {
         updateText("Tryk på nummer " + (recordedHits.length + 1));
